<resources>
    <string name="app_name">Zhipu-MaaSEngine</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="start_video">Start Video</string>
    <string name="stop_video">Stop Video</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="clear_watermark">Clear Watermark</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="disable_audio">Disable Audio</string>
    <string name="send_text">Send Text</string>
    <string name="send_audio_metadata">Send Audio metadata</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="ok" translatable="false">OK</string>
    <string name="params">params</string>
    <string name="audio_profile">AudioProfile</string>
    <string name="audio_scenario">AudioScenario</string>

</resources>