<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/toolbar_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/btn_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/leave"
        app:layout_constraintStart_toEndOf="@id/btn_join"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/et_channel_name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btn_leave"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <SurfaceView
        android:id="@+id/local_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/remote_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_join"
        app:layout_constraintWidth_percent="0.5" />

    <SurfaceView
        android:id="@+id/remote_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/local_view"
        app:layout_constraintTop_toBottomOf="@id/btn_join"
        app:layout_constraintWidth_percent="0.5"
        app:layout_goneMarginStart="10dp" />

    <Button
        android:id="@+id/btn_start_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/local_view" />

    <Button
        android:id="@+id/btn_stop_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/stop_video"
        app:layout_constraintStart_toEndOf="@id/btn_start_video"
        app:layout_constraintTop_toBottomOf="@id/local_view" />

    <Button
        android:id="@+id/btn_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/switch_camera"
        app:layout_constraintStart_toEndOf="@id/btn_stop_video"
        app:layout_constraintTop_toBottomOf="@id/local_view" />

    <Button
        android:id="@+id/btn_add_watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_watermark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_video" />

    <Button
        android:id="@+id/btn_clear_watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/clear_watermark"
        app:layout_constraintStart_toEndOf="@id/btn_add_watermark"
        app:layout_constraintTop_toBottomOf="@id/btn_start_video" />

    <Button
        android:id="@+id/btn_enable_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_watermark" />

    <Button
        android:id="@+id/btn_disable_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/disable_audio"
        app:layout_constraintStart_toEndOf="@id/btn_enable_audio"
        app:layout_constraintTop_toBottomOf="@id/btn_add_watermark" />

    <Button
        android:id="@+id/btn_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_enable_audio" />

    <Button
        android:id="@+id/btn_send_audio_metadata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/send_audio_metadata"
        app:layout_constraintStart_toEndOf="@id/btn_send_text"
        app:layout_constraintTop_toBottomOf="@id/btn_enable_audio" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_text" />


    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>